# oop-pokemon

./: README.md  docker-compose.yml
backend/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md
backend/include/: Chance.h  Command.h  FileLoad.h  Game.h  GameMode.h  GameStatus.h  Gamestatus.h  Item.h  Map.h  Move.h  Player.h  Pokemon.h  PokemonAlan.h  Potion.h  Skill.h  SkillCategory.h  SkillEffect.h  SkillEffectList.h  Type.h  WebServer.h  WebSocketServer.h  fileLoad.h  json.h  main.h
backend/src/: CMakeLists.txt  Chance.cpp  Command.cpp  Creature.h  FileLoad.cpp  Game.cpp  Gamestatus.cpp  Gamestatus.h  Item.cpp  Move.cpp  Move.h  Player.cpp  Pokemon.cpp  Pokemon.h  Potion.cpp  Skill.cpp  SkillCategory.cpp  SkillEffect.cpp  SkillEffectList.cpp  Type.cpp  Type.h  WebServer.cpp  WebServer.h  WebSocketServer.cpp  WebSocketServer.h  fileLoad.cpp  fileLoad.h  json.cpp  main.cpp  main.h  src.h
backend/src/Pokemon/Pokemon/: Move.h  Pokemon.cpp  PokemonCreature.h  Type.h  fileLoad.h  fileLoadcpp.cpp
backend/src/Pokemon/Pokemon/x64/Debug/: Pokemon.exe.recipe  Pokemon.ilk  vc143.idb
backend/src/Pokemon/Pokemon/x64/Debug/Pokemon.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Pokemon.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
backend/testData/: GameData.txt  case.txt  case2.txt
frontent/: .eslintrc.cjs  README.md  dockerfile  index.html  package.json
frontent/src/: App.vue  main.ts
frontent/src/assets/: base.css
frontent/src/common/: useTheme.ts  useWebSocket.ts
frontent/src/components/: SiteFooter.vue  SiteHeader.vue
frontent/src/components/game-page/: TestFileSelectDialog.vue  helper.ts
frontent/src/components/game-page/Panels/: BagElement.vue  BagPanel.vue  MonsterElement.vue  MonsterPanel.vue  MoveElement.vue  MovePanel.vue
frontent/src/components/icons/: GithubIcon.vue  MasterBallIcon.vue  NormalBallIcon.vue  PokemonBallIcon.vue  PokemonLogo.vue  UltraBallIcon.vue
frontent/src/layouts/: MainLayout.vue
frontent/src/pages/: GamePage.vue  HomePage.vue  NotFoundPage.vue
frontent/src/router/: index.ts  routes.ts
